# gifbrewery

./: .gitignore  Cargo.toml  README.md  gifbrewery-gtk  readme.md
crates/gifbrewery-core/: Cargo.toml
crates/gifbrewery-core/src/: lib.rs  model.rs
crates/gifbrewery-gtk/: Cargo.toml
crates/gifbrewery-gtk/src/: diagnostics.rs  export.rs  main.rs  media.rs  thumbnails.rs  timeline.rs  ui.rs
debian/: changelog  control  copyright  rules
docs/: PORTING_NOTES.md  SESSION_HANDOFF.md  TIMELINE_DESIGN.md
tools/: visual-smoke.sh
